--- a/docmood/values.yaml
+++ b/docmood/values.yaml
@@ -7,8 +7,8 @@ replicaCount: 1
 image:
   repository: nandanramdani/docmood
   pullPolicy: Always
-  # Overrides the image tag whose default is the chart appVersion.
   tag: main
+  digest: ""
 
 imagePullSecrets: []
 nameOverride: ""
