--- a/docmood/values.yaml
+++ b/docmood/values.yaml
@@ -5,10 +5,9 @@
 replicaCount: 1
 
 image:
-  repository: nandanramdani/docmood
-  pullPolicy: Always
-  tag: main
+  repository: nandanramdani/docmood:main
   digest: nandanramdani/docmood@sha256:c7269071b2a3e5043850308701094c11f06046ad3558036823c289a22b9b471c
+  pullPolicy: Always
 
 imagePullSecrets: []
 nameOverride: ""
